--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "pn-translater",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "express-handlebars": "^6.0.5",
-    "method-override": "^3.0.0",
-    "mongoose": "^6.3.0",
-    "nodemon": "^2.0.15"
-  }
+    "name": "pn-translater",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js",
+        "dev": "nodemon app.js",
+        "seed": "node /models/seeds/seeder.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "express-handlebars": "^6.0.5",
+        "method-override": "^3.0.0",
+        "mongoose": "^6.3.0",
+        "nodemon": "^2.0.15"
+    }
 }
