--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
+        "connect-flash": "^0.1.1",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-handlebars": "^6.0.5",
+        "express-session": "^1.17.2",
         "method-override": "^3.0.0",
         "mongoose": "^6.3.0",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "passport": "^0.5.2",
+        "passport-facebook": "^3.0.0",
+        "passport-google-oauth": "^2.0.0",
+        "passport-local": "^1.0.0"
     }
 }
