--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "passport": "^0.5.2",
         "passport-facebook": "^3.0.0",
         "passport-google-oauth": "^2.0.0",
+        "passport-google-oauth2": "^0.2.0",
         "passport-local": "^1.0.0"
     }
 }
